Migrate to Spring 4